recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:3: error: ';' expected but ',' found.
    forward(100),left(),forward(100),left(),forward(100),left()
                ^FourSquare:5: error: ';' expected but ',' found.
  square(),left(),square(),left(),square(),left()
          ^