recursion.logo.square.FourSquare.scala.code
override def run() {
  def square() {
    forward(100),left(),forward(100),left(),forward(100),left()
  }
  square(),left(),square(),left(),square(),left()
}